--- a/src/styles/SidebarStyle.module.css
+++ b/src/styles/SidebarStyle.module.css
@@ -13,15 +13,7 @@ body {
 
 
 /* nav.sidebarbar */
-nav.sidebar {
-    /* display: block;
-    background-color: #eaeaea;
-    height: 100vh;
-    width: 5%;
-    color: black !important; */
-    /* align-items: center; */
-    /* justify-content: space-around; */
-}
+
 
 nav.sidebar ul {
     list-style-type: none;
@@ -47,7 +39,7 @@ nav.sidebar ul {
     background-color: black !important;
 } */
 
-.brand{
+.brand {
     margin-left: 250px !important;
     transition: 0.2s ease !important;
 }
@@ -72,7 +64,7 @@ nav.sidebar ul li a:hover {
     text-decoration: none;
 }
 
-nav.sidebar ul .menu_toggle{
+nav.sidebar ul .menu_toggle {
     position: relative;
     top: 20px;
     left: 200px;
@@ -133,6 +125,51 @@ nav.sidebar ul .menu_toggle{
     transition: 0.5s ease;
 }
 
+.search {
+    position: relative !important;
+    display: flex !important;
+    border-radius: 8px !important;
+    border: 2px solid black !important;
+    width: 406px !important;
+    height: 43px !important;
+    margin-left: 200px;
+    padding: 20px;
+
+}
+
+.form_search {
+    border: 1px solid #E0E0E0;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 2px 5px 2px 5px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.19);
+    width: 417px;
+    margin-left: 50px;
+    /* height: 10px; */
+}
+
+.label {
+    padding: 2px 5px;
+    /* display: block; */
+    color: #181616;
+}
+
+.input_search {
+    width: 370px !important;
+}
+
+.bookshelf {
+    width: 50px;
+    height: 50px;
+}
+
+.library {
+    font-size: 20px;
+    font-weight: bold;
+    color: #424242;
+    margin-right: 25px;
+}
+
 
 /* Hamburger Animations */
 /* .menu_toggle span:nth-child(2) {
@@ -176,7 +213,7 @@ nav.sidebar ul .menu_toggle{
         margin: 30px 0px 0px 20px !important;
         border-radius: 15px !important;
     }
-    
+
     .profile_name {
         font-size: 20px;
         margin-top: 6px;
@@ -186,12 +223,12 @@ nav.sidebar ul .menu_toggle{
         /* text-align: center; */
     }
 
-    .brand{
+    .brand {
         margin-left: 100px !important;
         transition: 0.2s ease !important;
     }
 
-    nav.sidebar{
+    nav.sidebar {
         width: 20%;
     }
 
@@ -212,7 +249,7 @@ nav.sidebar ul .menu_toggle{
         transition: 0.9s;
     }
 
-    nav.sidebar ul .menu_toggle{
+    nav.sidebar ul .menu_toggle {
         position: relative;
         top: 17px;
         left: 120px;
@@ -221,6 +258,28 @@ nav.sidebar ul .menu_toggle{
 
     nav.sidebar ul.slide {
         transform: translateX(0);
+    }
+
+    .form_search {
+        border: 1px solid #E0E0E0;
+        box-sizing: border-box;
+        border-radius: 5px;
+        padding: 2px 5px 2px 5px;
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.19);
+        width: 300px;
+        margin-left: 17px;
+        /* height: 10px; */
+    }
+
+    .label {
+        padding: 2px 5px;
+        /* display: block; */
+        color: #181616;
+    }
+
+    .input_search {
+        width: 170px !important;
+        /* margin-left: 30px !important; */
     }
 
 }
