--- a/src/styles/book.module.css
+++ b/src/styles/book.module.css
@@ -76,7 +76,7 @@
 .description {
     position: absolute;
     width: 824px;
-    height: 100vh;
+    height: 342px;
     left: 104px;
     top: 632px;
 
@@ -84,21 +84,7 @@
     font-size: 20px;
     line-height: 26px;
     color: #000000;
-    margin-bottom: -20px !important;
-}
-
-.pengalihan {
-    position: absolute;
-    width: 824px;
-    height: 342px;
-    left: 104px;
-    top: 700px;
-
-    font-family: Airbnb Cereal App;
-    font-size: 20px;
-    line-height: 26px;
-    color: #000000;
-    /* margin-bottom: -20px !important; */
+    /* margin-bottom: 200px !important; */
 }
 
 .btn_borrow {
@@ -121,6 +107,51 @@
 
 .btn_borrow:hover {
     background-color: #e9b819 !important;
+    color: #FFFFFF;
+}
+
+.back {
+    position: absolute;
+    /* width: 60px;
+    height: 60px; */
+    font-size: 30px;
+    left: 27px;
+    top: 20px;
+    color: white;
+
+    /* background: #FFFFFF;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); */
+}
+
+.edit {
+    position: absolute;
+    text-decoration: none !important;
+    /* width: 236px;
+    height: 40px; */
+    font-size: 20px !important;
+    left: 1221px;
+    top: 17px;
+
+    /* font-family: Airbnb Cereal App; */
+    font-size: 30px;
+    line-height: 39px;
+
+    color: #FFFFFF;
+}
+
+.delete {
+    position: absolute;
+    text-decoration: none !important;
+    /* width: 236px;
+    height: 40px; */
+    font-size: 20px !important;
+    left: 1300px;
+    top: 17px;
+
+    /* font-family: Airbnb Cereal App; */
+    font-size: 30px;
+    line-height: 39px;
+
     color: #FFFFFF;
 }
 
@@ -223,14 +254,29 @@
         left: 70px;
         top: 50px;
         font-size: 25px !important;
-    
+
         background-color: #FBCC38 !important;
         border: none !important;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25) !important;
         border-radius: 10px;
         font-size: 30px;
         line-height: 39px;
-    
+
         color: #FFFFFF;
+    }
+
+    .edit {
+        font-size: 18px !important;
+        left: 180px;
+        top: 25px;
+    }
+    a.edit:hover {
+        color: red !important;
+    }
+    
+    .delete {
+        font-size: 18px !important;
+        left: 250px;
+        top: 25px;
     }
 }
