--- a/src/styles/SidebarStyle.module.css
+++ b/src/styles/SidebarStyle.module.css
@@ -171,7 +171,7 @@ nav.sidebar ul .menu_toggle {
 }
 
 .input_title{
-    border: 1px solid black !important;
+    border: 1px solid #ced4da !important;
 }
 
 .modal_add{
