--- a/src/styles/book.module.css
+++ b/src/styles/book.module.css
@@ -32,7 +32,7 @@
 
 .title {
     position: absolute;
-    width: 287px;
+    /* width: 287px; */
     height: 65px;
     left: 104px;
     top: 499px;
@@ -46,7 +46,7 @@
 
 .date {
     position: absolute;
-    width: 124px;
+    /* width: 124px; */
     height: 24px;
     left: 109px;
     top: 564px;
@@ -171,8 +171,8 @@
 
 .card {
     margin: 20px 0px !important;
-    /* width: 320px !important;
-height: 340px !important; */
+    width: 320px !important;
+    height: 500px !important;
     border: none !important;
     box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25) !important;
     border-radius: 15px !important;
@@ -310,18 +310,18 @@ height: 340px !important; */
         height: 250px !important;
         margin: auto !important;
     }
-    
+
     .book_title {
         text-align: center !important;
         font-size: 22px !important;
         font-weight: bold;
         /* line-height: 29px; */
     }
-    
+
     .card {
         margin: 20px auto !important;
         width: 300px !important;
-    /* height: 90% !important; */
+        /* height: 90% !important; */
         border: none !important;
         box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25) !important;
         border-radius: 15px !important;
