add fitur search

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,5 +4,6 @@ body{
     /* overflow: hidden !important; */
     margin: 0 !important;
     padding: 0 !important;
+    height: 100% !important;
 }
 
