--- a/src/styles/SidebarStyle.module.css
+++ b/src/styles/SidebarStyle.module.css
@@ -22,7 +22,7 @@ nav.sidebar ul {
     position: absolute;
     left: 0;
     top: 0;
-    height: 100vh;
+    height: 150vh;
     /* align-items: center; */
     /* justify-content: space-evenly; */
     flex-direction: column;
@@ -156,6 +156,7 @@ nav.sidebar ul .menu_toggle {
 
 .input_search {
     width: 370px !important;
+    background-color: #f8f9fa !important;
 }
 
 .bookshelf {
@@ -175,7 +176,7 @@ nav.sidebar ul .menu_toggle {
 }
 
 .modal_add{
-    max-width: 800px !important;
+    max-width: 600px !important;
 }
 
 
@@ -246,7 +247,7 @@ nav.sidebar ul .menu_toggle {
         position: absolute;
         left: 0;
         top: 0;
-        height: 100vh;
+        height: 350vh;
         /* align-items: center; */
         /* justify-content: space-evenly; */
         flex-direction: column;
