--- a/src/styles/book.module.css
+++ b/src/styles/book.module.css
@@ -157,9 +157,9 @@
 
 .card_img {
     /* position: absolute; */
-    width: 100%px !important;
-    height: 250px !important;
-    margin: auto !important;
+    width: 100% !important;
+    height: 200px !important;
+    margin: auto 0px !important;
 }
 
 .book_title {
@@ -172,10 +172,14 @@
 .card {
     margin: 20px 0px !important;
     width: 320px !important;
-    height: 500px !important;
+    height: 400px !important;
     border: none !important;
     box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25) !important;
     border-radius: 15px !important;
+}
+
+.pagination{
+    margin: 50px 0px !important;
 }
 
 
@@ -307,7 +311,7 @@
     .card_img {
         /* position: absolute; */
         width: 100% !important;
-        height: 250px !important;
+        height: 200px !important;
         margin: auto !important;
     }
 
