--- a/src/styles/SidebarStyle.module.css
+++ b/src/styles/SidebarStyle.module.css
@@ -14,12 +14,15 @@ body {
 
 /* nav.sidebarbar */
 
+.dropdown_nav{
+    padding-top: 15px !important;
+}
 
 nav.sidebar ul {
     list-style-type: none;
     display: flex;
     /* display: flex; */
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     height: 150vh;
@@ -156,6 +159,7 @@ nav.sidebar ul .menu_toggle {
 
 .input_search {
     width: 370px !important;
+    display: inline !important;
     background-color: #f8f9fa !important;
 }
 
@@ -244,7 +248,7 @@ nav.sidebar ul .menu_toggle {
     nav.sidebar ul {
         /* width: 50%; */
         display: flex;
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         height: 350vh;
