--- a/src/styles/book.module.css
+++ b/src/styles/book.module.css
@@ -4,6 +4,7 @@
     display: block;
     position: absolute !important;
     z-index: -9;
+    object-fit: cover;
 }
 
 .cover_full {
@@ -16,7 +17,7 @@
     border-radius: 15px;
 }
 
-.input_title{
+.input_title {
     border: 1px solid #ced4da !important;
 }
 
@@ -114,6 +115,10 @@
     color: #FFFFFF;
 }
 
+.btn_borrow:disabled {
+    cursor: no-drop;
+}
+
 .back {
     position: absolute;
     /* width: 60px;
@@ -121,11 +126,16 @@
     font-size: 30px;
     left: 27px;
     top: 20px;
-    color: white;
+    color: black;
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 70%;
+    border: 3px solid black;
 
     /* background: #FFFFFF;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); */
 }
+
 
 .edit {
     position: absolute;
@@ -161,7 +171,7 @@
     color: #FFFFFF;
 }
 
-.carousell{
+.carousell {
     /* margin-left: 350px !important; */
     height: 500px !important;
     margin: 50px 300px !important;
@@ -193,7 +203,7 @@
     border-radius: 15px !important;
 }
 
-.pagination{
+.pagination {
     margin: 50px 500px !important;
 }
 
@@ -208,7 +218,7 @@
         z-index: -9;
     }
 
-    .carousell{
+    .carousell {
         /* margin-left: 350px !important; */
         margin: 20px 20px !important;
         width: 340px !important;
@@ -218,8 +228,8 @@
     .cover_full {
         width: 120px !important;
         height: 150px !important;
-        left: 220px !important;
-        top: 120px;
+        left: 240px !important;
+        top: 130px;
         position: absolute;
     }
 
@@ -239,13 +249,13 @@
 
     .title {
         position: absolute;
-        width: 287px;
+        width: 200px !important;
         height: 65px;
         left: 30px;
-        top: 260px;
+        top: 290px;
 
         /* font-family: Airbnb Cereal App; */
-        font-size: 40px;
+        font-size: 29px;
         font-weight: bold;
         line-height: 65px;
         color: black;
@@ -256,7 +266,7 @@
         width: 124px;
         height: 24px;
         left: 30px;
-        top: 320px;
+        top: 350px;
 
         /* font-family: Airbnb Cereal App; */
         font-size: 20px;
@@ -267,10 +277,10 @@
 
     .status {
         position: absolute;
-        width: 278px;
+        width: 0px;
         height: 51px;
-        left: 180px;
-        top: 325px;
+        left: 190px;
+        top: 340px;
 
         /* font-family: Airbnb Cereal App; */
         font-weight: bold;
@@ -297,11 +307,12 @@
 
     .btn_borrow {
         position: fixed;
+        /* cursor: no-drop; */
         margin-top: 20px;
         width: 200px;
-        height: 54px;
-        left: 70px;
-        top: 50px;
+        height: 50px;
+        left: 10px;
+        top: 150px;
         font-size: 25px !important;
 
         background-color: #FBCC38 !important;
@@ -314,21 +325,27 @@
         color: #FFFFFF;
     }
 
-    .edit {
-        font-size: 18px !important;
-        left: 180px;
-        top: 25px;
+    .btn_borrow:disabled {
+        cursor: no-drop;
+        opacity: 100% !important;
+        position: fixed;
+        margin-top: 20px;
+        width: 200px;
+        height: 50px;
+        left: 10px;
+        top: 150px;
+        font-size: 25px !important;
+
+        background-color: #FBCC38 !important;
+        border: none !important;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25) !important;
+        border-radius: 10px;
+        font-size: 30px;
+        line-height: 39px;
+
+        color: #FFFFFF;
     }
 
-    a.edit:hover {
-        color: red !important;
-    }
-
-    .delete {
-        font-size: 18px !important;
-        left: 250px;
-        top: 25px;
-    }
 
     .card_img {
         /* position: absolute; */
@@ -353,7 +370,24 @@
         border-radius: 15px !important;
     }
 
-    .pagination{
+    .pagination {
         margin: 20px 45px !important;
+    }
+
+    .back {
+        position: absolute;
+        /* width: 60px;
+        height: 60px; */
+        font-size: 20px;
+        left: 15px;
+        top: 10px;
+        color: black;
+        background-color: white;
+        padding: 10px 17px;
+        border-radius: 70%;
+        border: 3px solid black;
+
+        /* background: #FFFFFF;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); */
     }
 }
