--- a/src/styles/SidebarStyle.module.css
+++ b/src/styles/SidebarStyle.module.css
@@ -160,6 +160,7 @@ nav.sidebar ul .menu_toggle {
 
 .input_search {
     width: 370px !important;
+    display: inline !important;
     background-color: #f8f9fa !important;
 }
 
@@ -175,6 +176,13 @@ nav.sidebar ul .menu_toggle {
     margin-right: 25px;
 }
 
+.input_title{
+    border: 1px solid #ced4da !important;
+}
+
+.modal_add{
+    max-width: 600px !important;
+}
 
 
 /* Hamburger Animations */
